--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/yogesh_app
+spring.datasource.url=jdbc:mysql://localhost:3306/voting_app
 spring.datasource.username=root
 spring.datasource.password=Salunkhe@07
 spring.jpa.hibernate.ddl-auto=update
